Bug 497506 - When windows are overlapping, pager sometimes picks wrong window to drag
Summary: When windows are overlapping, pager sometimes picks wrong window to drag
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Pager widget (other bugs)
Version First Reported In: 6.2.4
Platform: Arch Linux Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
: 505008 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-12-15 14:32 UTC by Mariusz Libera
Modified: 2025-06-13 20:42 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.1
Sentry Crash Report:


Attachments
video demonstration (3.07 MB, video/x-matroska)
2024-12-15 14:32 UTC, Mariusz Libera
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mariusz Libera 2024-12-15 14:32:01 UTC
Created attachment 176649 [details]
video demonstration

I want to drag the window that is on top, but when windows are overlapping and I click and drag on the pager it sometimes picks the window below the active one.

This used to work reliably in plasma 5 on X11.

Operating System: Arch Linux 
KDE Plasma Version: 6.2.4
KDE Frameworks Version: 6.9.0
Qt Version: 6.8.1
Kernel Version: 6.12.4-arch1-1-ml (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 6800H with Radeon Graphics
Memory: 34.9 GiB of RAM
Graphics Processor: AMD Radeon 680M
Manufacturer: LENOVO
Product Name: 82RE
System Version: Legion 5 15ARH7
Comment 1 Bug Janitor Service 2025-02-07 12:55:27 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/2796
Comment 2 Niccolò Venerandi 2025-02-10 13:34:22 UTC
Git commit 4493b07d295d45700845baf4d55c773e6b3cdc01 by Niccolò Venerandi.
Committed on 10/02/2025 at 13:33.
Pushed by niccolove into branch 'master'.

Treat StackingOrder as int instead of list

The StackingOrder is a int; trying to convert it into a
QList resulted in an always-empty list, which then gave
us 0 as the stacking order of any window.

M  +2    -2    applets/pager/pagermodel.cpp
M  +1    -1    applets/pager/pagermodel.h
M  +1    -1    applets/pager/windowmodel.cpp

https://invent.kde.org/plasma/plasma-desktop/-/commit/4493b07d295d45700845baf4d55c773e6b3cdc01
Comment 3 Niccolò Venerandi 2025-02-10 13:34:43 UTC
Git commit d33654b7516fe7b61691412a5a6cffb991dd214e by Niccolò Venerandi.
Committed on 10/02/2025 at 13:34.
Pushed by niccolove into branch 'Plasma/6.3'.

Treat StackingOrder as int instead of list

The StackingOrder is a int; trying to convert it into a
QList resulted in an always-empty list, which then gave
us 0 as the stacking order of any window.


(cherry picked from commit 4493b07d295d45700845baf4d55c773e6b3cdc01)

Co-authored-by: Niccolò Venerandi <niccolo@venerandi.com>

M  +2    -2    applets/pager/pagermodel.cpp
M  +1    -1    applets/pager/pagermodel.h
M  +1    -1    applets/pager/windowmodel.cpp

https://invent.kde.org/plasma/plasma-desktop/-/commit/d33654b7516fe7b61691412a5a6cffb991dd214e
Comment 4 John Kizer 2025-06-13 20:42:19 UTC
*** Bug 505008 has been marked as a duplicate of this bug. ***