Treat StackingOrder as int instead of list

The StackingOrder is a int; trying to convert it into a
QList resulted in an always-empty list, which then gave
us 0 as the stacking order of any window.

BUG:497506